syntax = "proto3";

option csharp_namespace = "Customer.GRPC.Protos";

service CustomerProtoService {
	rpc CheckCustomer (CheckCustomerRequest) returns (CheckCustomerModel);
}

message CheckCustomerRequest{
	string id = 1; 
}

message CheckCustomerModel{
	bool result = 1;
}